--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -1,34 +1,10 @@
-.animation-container {
-    transition: opacity 3s ease-in;
-  }
-  
-  .animation-container.show {
-    opacity: 8;
-  }
-  
-  .animation-container.hide {
-    opacity: 0;
-    pointer-events: none;
-}
-  
-:root{
-    background-color: rgb(255, 255, 255);
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
+
+
+body{
+  background-color: #c4c7cE;
 }
 
 
-
-.cont-name{
-    color: black;
-    background-color: burlywood;
-    height: 50vh;
-    border-radius: 1rem;
-    display: flex;
-    flex-direction: column;
-    padding: 2rem;    
-}
-
-.cont-me{
-    display: grid;
-    align-items: center;
-    justify-content: center;
-}
